--- a/guides/05_Using_reasoning_for_routine_generation_with_Nugen/05_Using_reasoning_for_routine_generation_with_Nugen.ipynb
+++ b/guides/05_Using_reasoning_for_routine_generation_with_Nugen/05_Using_reasoning_for_routine_generation_with_Nugen.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "L67ZWi3GKQ9r"
    },
@@ -77,12 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
     "url_api_server = \"https://api.nugen.in\"\n",
-    "api_key =  <enter your api key> # Replace with your actual Nugen API key\n",
+    "api_key = os.getenv(\"NUGEN_API_KEY\")  # <-- use env var instead of hardcoding\n",
+    "assert api_key, \"Missing NUGEN_API_KEY. Put it in .env or export it in terminal.\"\n",
+    "\n",
     "MODEL = \"nugen-flash-instruct\""
    ]
   },
@@ -102,36 +109,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "import time\n",
+    "\n",
     "class NugenAPIClient:\n",
     "    def __init__(self, base_url, api_key):\n",
     "        self.base_url = base_url\n",
     "        self.api_key = api_key\n",
     "\n",
-    "    def chat_completions_create(self, model, messages, max_tokens=400, temperature=1):\n",
-    "        url = f\"{self.base_url}/inference/completions\"\n",
+    "    def chat_completions_create(self, model, messages, max_tokens=250, temperature=0.3):\n",
+    "        url = f\"{self.base_url}/api/v3/inference/completions\"\n",
+    "\n",
     "        headers = {\n",
     "            \"Authorization\": f\"Bearer {self.api_key}\",\n",
     "            \"Content-Type\": \"application/json\"\n",
     "        }\n",
+    "\n",
     "        prompt = \"\\n\".join([message[\"content\"] for message in messages])\n",
     "\n",
     "        payload = {\n",
     "            \"model\": model,\n",
     "            \"prompt\": prompt,\n",
     "            \"max_tokens\": max_tokens,\n",
-    "            \"temperature\": temperature\n",
+    "            \"temperature\": temperature,\n",
+    "            \"stream\": False\n",
     "        }\n",
     "\n",
-    "        response = requests.post(url, json=payload, headers=headers)\n",
+    "        last_err = None\n",
+    "        for attempt in range(3):\n",
+    "            response = requests.post(\n",
+    "                url,\n",
+    "                json=payload,\n",
+    "                headers=headers,\n",
+    "                timeout=60\n",
+    "            )\n",
     "\n",
-    "        if response.status_code == 200:\n",
-    "            return response.json()\n",
-    "        else:\n",
-    "            raise Exception(f\"Error {response.status_code}: {response.text}\")\n"
+    "            if response.status_code == 200:\n",
+    "                return response.json()\n",
+    "\n",
+    "            last_err = f\"Attempt {attempt + 1} failed: {response.status_code} - {response.text}\"\n",
+    "            print(last_err)\n",
+    "            time.sleep(2 * (attempt + 1))\n",
+    "\n",
+    "        raise Exception(last_err)\n"
    ]
   },
   {
@@ -161,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "1abSuDxSK2Fc"
    },
@@ -250,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -432,12 +456,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full API Response: {'id': 'chatcmpl-qwen2.5--1769686301', 'choices': [{'finish_reason': 'stop', 'index': 0, 'logprobs': None, 'text': \"You are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an LLM.\\nThe LLM using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\\n\\nPlease follow these instructions:\\n1. **Review the customer service policy carefully** to ensure every step is accounted for. It is crucial not to skip any steps or policies.\\n2. **Organize the instructions into a logical, step-by-step order**, using the specified format.\\n3. **Use the following format**:\\n   - **Main actions are numbered** (e.g., 1, 2, 3).\\n   - **Sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\\n      **Sub-actions should start on new lines**\\n   - **Specify conditions using clear 'if...then...else' statements** (e.g., 'If the product was purchased within 30 days, then...').\\n   - **For instructions that require more information from the customer**, provide polite and professional prompts to ask for additional information.\\n   - **For actions that require data from external\"}], 'created': 1769686301, 'model': 'nugen-flash-instruct', 'object': 'text_completion', 'system_fingerprint': None, 'usage': {'completion_tokens': 250, 'prompt_tokens': 822, 'total_tokens': 1072, 'completion_tokens_details': None, 'prompt_tokens_details': None}}\n",
+      "Routine failed validation: you are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an llm.\n",
+      "the llm using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\n",
+      "\n",
+      "please follow these instructions:\n",
+      "1. **review the customer service policy carefully** to ensure every step is accounted for. it is crucial not to skip any steps or policies.\n",
+      "2. **organize the instructions into a logical, step-by-step order**, using the specified format.\n",
+      "3. **use the following format**:\n",
+      "   - **main actions are numbered** (e.g., 1, 2, 3).\n",
+      "   - **sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\n",
+      "      **sub-actions should start on new lines**\n",
+      "   - **specify conditions using clear 'if...then...else' statements** (e.g., 'if the product was purchased within 30 days, then...').\n",
+      "   - **for instructions that require more information from the customer**, provide polite and professional prompts to ask for additional information.\n",
+      "   - **for actions that require data from external\n",
+      "Full API Response: {'id': 'chatcmpl-qwen2.5--1769686330', 'choices': [{'finish_reason': 'stop', 'index': 0, 'logprobs': None, 'text': \"You are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an LLM.\\nThe LLM using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\\n\\nPlease follow these instructions:\\n1. **Review the customer service policy carefully** to ensure every step is accounted for. It is crucial not to skip any steps or policies.\\n2. **Organize the instructions into a logical, step-by-step order**, using the specified format.\\n3. **Use the following format**:\\n   - **Main actions are numbered** (e.g., 1, 2, 3).\\n   - **Sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\\n      **Sub-actions should start on new lines**\\n   - **Specify conditions using clear 'if...then...else' statements** (e.g., 'If the product was purchased within 30 days, then...').\\n   - **For instructions that require more information from the customer**, provide polite and professional prompts to ask for additional information.\\n   - **For actions that require data from external\"}], 'created': 1769686330, 'model': 'nugen-flash-instruct', 'object': 'text_completion', 'system_fingerprint': None, 'usage': {'completion_tokens': 250, 'prompt_tokens': 916, 'total_tokens': 1166, 'completion_tokens_details': None, 'prompt_tokens_details': None}}\n",
+      "Routine failed validation: you are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an llm.\n",
+      "the llm using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\n",
+      "\n",
+      "please follow these instructions:\n",
+      "1. **review the customer service policy carefully** to ensure every step is accounted for. it is crucial not to skip any steps or policies.\n",
+      "2. **organize the instructions into a logical, step-by-step order**, using the specified format.\n",
+      "3. **use the following format**:\n",
+      "   - **main actions are numbered** (e.g., 1, 2, 3).\n",
+      "   - **sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\n",
+      "      **sub-actions should start on new lines**\n",
+      "   - **specify conditions using clear 'if...then...else' statements** (e.g., 'if the product was purchased within 30 days, then...').\n",
+      "   - **for instructions that require more information from the customer**, provide polite and professional prompts to ask for additional information.\n",
+      "   - **for actions that require data from external\n",
+      "Full API Response: {'id': 'chatcmpl-qwen2.5--1769686369', 'choices': [{'finish_reason': 'stop', 'index': 0, 'logprobs': None, 'text': \"You are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an LLM.\\nThe LLM using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\\n\\nPlease follow these instructions:\\n1. **Review the customer service policy carefully** to ensure every step is accounted for. It is crucial not to skip any steps or policies.\\n2. **Organize the instructions into a logical, step-by-step order**, using the specified format.\\n3. **Use the following format**:\\n   - **Main actions are numbered** (e.g., 1, 2, 3).\\n   - **Sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\\n      **Sub-actions should start on new lines**\\n   - **Specify conditions using clear 'if...then...else' statements** (e.g., 'If the product was purchased within 30 days, then...').\\n   - **For instructions that require data from external systems**, write a step to call a function using backticks for the function name (e.g., `call the check\"}], 'created': 1769686369, 'model': 'nugen-flash-instruct', 'object': 'text_completion', 'system_fingerprint': None, 'usage': {'completion_tokens': 250, 'prompt_tokens': 1003, 'total_tokens': 1253, 'completion_tokens_details': None, 'prompt_tokens_details': None}}\n",
+      "Routine failed validation: check the product's purchase date`).\n",
+      "   - **use the `if` statement to check for conditions** (e.g., `if (condition) { statement }`, `if (condition) { statement1; statement2; }`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2;`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2;`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2;`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2;`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2;`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2;`).\n",
+      "   - **use the `then` and `else` statements** (e.g., `then statement1; else statement2\n",
+      "Full API Response: {'id': 'chatcmpl-qwen2.5--1769686419', 'choices': [{'finish_reason': 'stop', 'index': 0, 'logprobs': None, 'text': \"You are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an LLM.\\nThe LLM using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\\n\\nPlease follow these instructions:\\n1. **Review the customer service policy carefully** to ensure every step is accounted for. It is crucial not to skip any steps or policies.\\n2. **Organize the instructions into a logical, step-by-step order**, using the specified format.\\n3. **Use the following format**:\\n   - **Main actions are numbered** (e.g., 1, 2, 3).\\n   - **Sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\\n      **Sub-actions should start on new lines**\\n   - **Specify conditions using clear 'if...then...else' statements** (e.g., 'If the product was purchased within 30 days, then...').\\n   - **For instructions that require more information from the customer**, provide polite and professional prompts to ask for additional information.\\n   - **For actions that require data from external\"}], 'created': 1769686419, 'model': 'nugen-flash-instruct', 'object': 'text_completion', 'system_fingerprint': None, 'usage': {'completion_tokens': 250, 'prompt_tokens': 838, 'total_tokens': 1088, 'completion_tokens_details': None, 'prompt_tokens_details': None}}\n"
+     ]
+    }
+   ],
    "source": [
-    "with ThreadPoolExecutor() as executor:\n",
-    "    results = list(executor.map(process_article, articles))"
+    "results = []\n",
+    "for article in articles:\n",
+    "    results.append(process_article(article))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a helpful assistant tasked with taking an external facing help center article and converting it into an internal-facing programmatically executable routine optimized for an LLM.\n",
+      "The LLM using this routine will be tasked with reading the policy, answering incoming questions from customers, and helping drive the case toward resolution.\n",
+      "\n",
+      "Please follow these instructions:\n",
+      "1. **Review the customer service policy carefully** to ensure every step is accounted for. It is crucial not to skip any steps or policies.\n",
+      "2. **Organize the instructions into a logical, step-by-step order**, using the specified format.\n",
+      "3. **Use the following format**:\n",
+      "   - **Main actions are numbered** (e.g., 1, 2, 3).\n",
+      "   - **Sub-actions are lettered** under their relevant main actions (e.g., 1a, 1b).\n",
+      "      **Sub-actions should start on new lines**\n",
+      "   - **Specify conditions using clear 'if...then...else' statements** (e.g., 'If the product was purchased within 30 days, then...').\n",
+      "   - **For instructions that require more information from the customer**, provide polite and professional prompts to ask for additional information.\n",
+      "   - **For actions that require data from external\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_routine_text(results):\n",
+    "    if not results:\n",
+    "        return \"No results generated\"\n",
+    "\n",
+    "    routine = results[0].get(\"routine\")\n",
+    "    if not routine:\n",
+    "        return \"No routine found\"\n",
+    "    try:\n",
+    "        return routine[\"choices\"][0].get(\"text\") or routine[\"choices\"][0][\"message\"][\"content\"]\n",
+    "    except Exception:\n",
+    "        return str(routine)\n",
+    "\n",
+    "print(extract_routine_text(results))\n"
    ]
   },
   {
@@ -449,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +626,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -528,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
